seaqt/QtWidgets/gen_qabstractitemview.h

typedef struct QAbstractItemDelegate QAbstractItemDelegate;
typedef struct QAbstractItemModel QAbstractItemModel;
typedef struct QAbstractItemView QAbstractItemView;
typedef struct QItemSelectionModel QItemSelectionModel;
typedef struct QMetaObject QMetaObject;
typedef struct QModelIndex QModelIndex;
typedef struct QPoint QPoint;
typedef struct QRect QRect;
typedef struct QSize QSize;
typedef struct QVariant QVariant;
typedef struct QWidget QWidget;
QAbstractItemView* QAbstractItemView_new(QWidget* parent);
QAbstractItemView* QAbstractItemView_new2();
QMetaObject* QAbstractItemView_metaObject(const QAbstractItemView* self);
void* QAbstractItemView_metacast(QAbstractItemView* self, const char* param1);
struct miqt_string QAbstractItemView_tr(const char* s);
void QAbstractItemView_setModel(QAbstractItemView* self, QAbstractItemModel* model);
QAbstractItemModel* QAbstractItemView_model(const QAbstractItemView* self);
void QAbstractItemView_setSelectionModel(QAbstractItemView* self, QItemSelectionModel* selectionModel);
QItemSelectionModel* QAbstractItemView_selectionModel(const QAbstractItemView* self);
void QAbstractItemView_setItemDelegate(QAbstractItemView* self, QAbstractItemDelegate* delegate);
QAbstractItemDelegate* QAbstractItemView_itemDelegate(const QAbstractItemView* self);
void QAbstractItemView_setSelectionMode(QAbstractItemView* self, int mode);
int QAbstractItemView_selectionMode(const QAbstractItemView* self);
void QAbstractItemView_setSelectionBehavior(QAbstractItemView* self, int behavior);
int QAbstractItemView_selectionBehavior(const QAbstractItemView* self);
QModelIndex* QAbstractItemView_currentIndex(const QAbstractItemView* self);
QModelIndex* QAbstractItemView_rootIndex(const QAbstractItemView* self);
void QAbstractItemView_setEditTriggers(QAbstractItemView* self, int triggers);
int QAbstractItemView_editTriggers(const QAbstractItemView* self);
void QAbstractItemView_setVerticalScrollMode(QAbstractItemView* self, int mode);
int QAbstractItemView_verticalScrollMode(const QAbstractItemView* self);
void QAbstractItemView_resetVerticalScrollMode(QAbstractItemView* self);
void QAbstractItemView_setHorizontalScrollMode(QAbstractItemView* self, int mode);
int QAbstractItemView_horizontalScrollMode(const QAbstractItemView* self);
void QAbstractItemView_resetHorizontalScrollMode(QAbstractItemView* self);
void QAbstractItemView_setAutoScroll(QAbstractItemView* self, bool enable);
bool QAbstractItemView_hasAutoScroll(const QAbstractItemView* self);
void QAbstractItemView_setAutoScrollMargin(QAbstractItemView* self, int margin);
int QAbstractItemView_autoScrollMargin(const QAbstractItemView* self);
void QAbstractItemView_setTabKeyNavigation(QAbstractItemView* self, bool enable);
bool QAbstractItemView_tabKeyNavigation(const QAbstractItemView* self);
void QAbstractItemView_setDropIndicatorShown(QAbstractItemView* self, bool enable);
bool QAbstractItemView_showDropIndicator(const QAbstractItemView* self);
void QAbstractItemView_setDragEnabled(QAbstractItemView* self, bool enable);
bool QAbstractItemView_dragEnabled(const QAbstractItemView* self);
void QAbstractItemView_setDragDropOverwriteMode(QAbstractItemView* self, bool overwrite);
bool QAbstractItemView_dragDropOverwriteMode(const QAbstractItemView* self);
void QAbstractItemView_setDragDropMode(QAbstractItemView* self, int behavior);
int QAbstractItemView_dragDropMode(const QAbstractItemView* self);
void QAbstractItemView_setDefaultDropAction(QAbstractItemView* self, int dropAction);
int QAbstractItemView_defaultDropAction(const QAbstractItemView* self);
void QAbstractItemView_setAlternatingRowColors(QAbstractItemView* self, bool enable);
bool QAbstractItemView_alternatingRowColors(const QAbstractItemView* self);
void QAbstractItemView_setIconSize(QAbstractItemView* self, QSize* size);
QSize* QAbstractItemView_iconSize(const QAbstractItemView* self);
void QAbstractItemView_setTextElideMode(QAbstractItemView* self, int mode);
int QAbstractItemView_textElideMode(const QAbstractItemView* self);
void QAbstractItemView_keyboardSearch(QAbstractItemView* self, struct miqt_string search);
QRect* QAbstractItemView_visualRect(const QAbstractItemView* self, QModelIndex* index);
void QAbstractItemView_scrollTo(QAbstractItemView* self, QModelIndex* index, int hint);
QModelIndex* QAbstractItemView_indexAt(const QAbstractItemView* self, QPoint* point);
QSize* QAbstractItemView_sizeHintForIndex(const QAbstractItemView* self, QModelIndex* index);
int QAbstractItemView_sizeHintForRow(const QAbstractItemView* self, int row);
int QAbstractItemView_sizeHintForColumn(const QAbstractItemView* self, int column);
void QAbstractItemView_openPersistentEditor(QAbstractItemView* self, QModelIndex* index);
void QAbstractItemView_closePersistentEditor(QAbstractItemView* self, QModelIndex* index);
bool QAbstractItemView_isPersistentEditorOpen(const QAbstractItemView* self, QModelIndex* index);
void QAbstractItemView_setIndexWidget(QAbstractItemView* self, QModelIndex* index, QWidget* widget);
QWidget* QAbstractItemView_indexWidget(const QAbstractItemView* self, QModelIndex* index);
void QAbstractItemView_setItemDelegateForRow(QAbstractItemView* self, int row, QAbstractItemDelegate* delegate);
QAbstractItemDelegate* QAbstractItemView_itemDelegateForRow(const QAbstractItemView* self, int row);
void QAbstractItemView_setItemDelegateForColumn(QAbstractItemView* self, int column, QAbstractItemDelegate* delegate);
QAbstractItemDelegate* QAbstractItemView_itemDelegateForColumn(const QAbstractItemView* self, int column);
QAbstractItemDelegate* QAbstractItemView_itemDelegateWithIndex(const QAbstractItemView* self, QModelIndex* index);
QAbstractItemDelegate* QAbstractItemView_itemDelegateForIndex(const QAbstractItemView* self, QModelIndex* index);
QVariant* QAbstractItemView_inputMethodQuery(const QAbstractItemView* self, int query);
void QAbstractItemView_reset(QAbstractItemView* self);
void QAbstractItemView_setRootIndex(QAbstractItemView* self, QModelIndex* index);
void QAbstractItemView_doItemsLayout(QAbstractItemView* self);
void QAbstractItemView_selectAll(QAbstractItemView* self);
void QAbstractItemView_edit(QAbstractItemView* self, QModelIndex* index);
void QAbstractItemView_clearSelection(QAbstractItemView* self);
void QAbstractItemView_setCurrentIndex(QAbstractItemView* self, QModelIndex* index);
void QAbstractItemView_scrollToTop(QAbstractItemView* self);
void QAbstractItemView_scrollToBottom(QAbstractItemView* self);
void QAbstractItemView_update(QAbstractItemView* self, QModelIndex* index);
void QAbstractItemView_pressed(QAbstractItemView* self, QModelIndex* index);
void QAbstractItemView_connect_pressed(QAbstractItemView* self, intptr_t slot);
void QAbstractItemView_clicked(QAbstractItemView* self, QModelIndex* index);
void QAbstractItemView_connect_clicked(QAbstractItemView* self, intptr_t slot);
void QAbstractItemView_doubleClicked(QAbstractItemView* self, QModelIndex* index);
void QAbstractItemView_connect_doubleClicked(QAbstractItemView* self, intptr_t slot);
void QAbstractItemView_activated(QAbstractItemView* self, QModelIndex* index);
void QAbstractItemView_connect_activated(QAbstractItemView* self, intptr_t slot);
void QAbstractItemView_entered(QAbstractItemView* self, QModelIndex* index);
void QAbstractItemView_connect_entered(QAbstractItemView* self, intptr_t slot);
void QAbstractItemView_viewportEntered(QAbstractItemView* self);
void QAbstractItemView_connect_viewportEntered(QAbstractItemView* self, intptr_t slot);
void QAbstractItemView_iconSizeChanged(QAbstractItemView* self, QSize* size);
void QAbstractItemView_connect_iconSizeChanged(QAbstractItemView* self, intptr_t slot);
struct miqt_string QAbstractItemView_tr2(const char* s, const char* c);
struct miqt_string QAbstractItemView_tr3(const char* s, const char* c, int n);
bool QAbstractItemView_override_virtual_setModel(void* self, intptr_t slot);
void QAbstractItemView_virtualbase_setModel(void* self, QAbstractItemModel* model);
bool QAbstractItemView_override_virtual_setSelectionModel(void* self, intptr_t slot);
void QAbstractItemView_virtualbase_setSelectionModel(void* self, QItemSelectionModel* selectionModel);
void QAbstractItemView_virtualbase_keyboardSearch(void* self, struct miqt_string search);